# subscription-tg-bot

./: .gitignore  README.md  alembic.ini  env.bot.example  env.database.example  insert_content.py  insert_subscriptions.py  main.py  pyproject.toml
bot/: config.py
bot/dto/: __init__.py  subscription.py  user.py
bot/exceptions/: __init__.py  subscriptions.py
bot/handlers/: anonymous_survey.py  constants.py  meme.py  share_memes.py  start.py  subscriptions.py  tariffs.py
bot/keyboards/: constants.py  main_menu.py  memes.py  subscriptions.py  tariffs.py
bot/services/: __init__.py  subscription.py  user.py
database/: config.py
database/alembic/: env.py
database/alembic/versions/: 2026_02_19_2214-84668336a838_created_base_entities.py  2026_02_20_0037-8f578a2c084d_preset_for_timestamp_first_count.py  2026_02_23_2207-a3acdea84141_added_type_to_content.py  2026_02_25_1801-a96adb1ef2fd_added_subscription.py  2026_02_25_2105-61d95e3ec498_added_subscription_to_user.py  2026_02_26_1728-09fd2e36a0b0_expiration_date_changed_to_timestamp_.py  2026_02_26_1809-9ea30b169ae9_added_max_count_tryies_get_memes_to_user.py
database/models/: __init__.py  content.py  subscription.py  user.py  view_content.py
