[project]
name = "subscription-tg-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Mb Next Time",email = "sombrero.oval@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
