[project]
name = "subscription-tg-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Mb Next Time",email = "sombrero.oval@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
